metadata/Vendor-bids/objects/Product_List__c.object
<CustomObject>
    <description>Listing products</description>
    <fields>
        <fullName>Bids__c</fullName>
        <label>Bid</label>
        <referenceTo>Bid__c</referenceTo>
        <relationshipLabel>Product Lists</relationshipLabel>
        <relationshipName>Product_Lists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Item_Nick_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Picke the item you need...</description>
        <label>Product Catelog</label>
        <referenceTo>Product_Catalog__c</referenceTo>
        <relationshipLabel>Product Lists</relationshipLabel>
        <relationshipName>Product_Lists</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity_Needed__c</fullName>
        <description>Input Quantity</description>
        <label>Quantity Needed</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Price__c</fullName>
        <description>What is your target price for this item?</description>
        <label>Target_Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Product List</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Bids__c</columns>
        <columns>Quantity_Needed__c</columns>
        <columns>Target_Price__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Line-{0000}</displayFormat>
        <label>Product List Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Lists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>